--- a/www/custom.css
+++ b/www/custom.css
@@ -596,7 +596,6 @@ details summary h4 {
   }
 
   .radio-group label {
-  .radio-group label {
     display: flex;
     align-items: flex-start;
     gap: 0.5em;
@@ -626,10 +625,11 @@ details summary h4 {
   }
 
   details summary h3 {
+  margin-left: 0;
   }
 
   details:has(summary h3) summary {
-    list-style: none;
+    padding-left: 0;
   }
 }
 
