--- a/www/custom.css
+++ b/www/custom.css
@@ -596,6 +596,7 @@ details summary h4 {
   }
 
   .radio-group label {
+  .radio-group label {
     display: flex;
     align-items: flex-start;
     gap: 0.5em;
