--- a/www/custom.css
+++ b/www/custom.css
@@ -622,7 +622,7 @@ details summary h4 {
   
   .radio-group label {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 0.4em;
     line-height: 1.4;
     margin-bottom: 0.3em;
@@ -630,7 +630,7 @@ details summary h4 {
   }  
 
   .radio-group input[type="radio"] {
-    margin-top: 0.1em;
+    margin-top: 0.2em;
     flex-shrink: 0;
   }
 
