--- a/www/custom.css
+++ b/www/custom.css
@@ -243,7 +243,7 @@ input[type="radio"] {
 .radio-group label {
   display: flex;
   align-items: center;
-  gap: 0.25em;
+  gap: 0.5em;
   cursor: pointer;
   white-space: nowrap;
 }
@@ -269,7 +269,6 @@ details summary h3 {
   display: inline;
   margin: 0;
   font-weight: 500;
-  margin-left: -1.2em;
 }
 
 details summary h4,
@@ -281,6 +280,7 @@ details summary h5 {
 
 details:has(summary h3) summary {
   list-style: none;
+  padding-left: 0;
 }
 
 details:has(summary h3) summary::-webkit-details-marker {
@@ -595,7 +595,8 @@ details summary h4 {
   .form-row {
     flex-direction: column;
   }
-
+  
+  /* グリッドレイアウトを1列に強制 */
   .config-items-grid {
     grid-template-columns: 1fr !important;
   }
@@ -625,7 +626,7 @@ details summary h4 {
 
   .radio-group label {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 0.5em;
     white-space: normal;
     margin-bottom: 0.5em;
@@ -634,7 +635,7 @@ details summary h4 {
 
   .radio-group input[type="radio"] {
     flex-shrink: 0;
-    margin-top: 0.1em;
+    margin-top: 0;
   }
 
   .form-group label,
@@ -653,7 +654,7 @@ details summary h4 {
   }
 
   details summary h3 {
-  margin-left: 0;
+    margin-left: 0;
   }
 
   details:has(summary h3) summary {
