--- a/www/custom.css
+++ b/www/custom.css
@@ -62,6 +62,9 @@
 input[type="checkbox"],
 input[type="radio"] {
   accent-color: var(--owrt-blue);
+  vertical-align: middle;
+  margin: 0;
+  padding: 0;
 }
 
 .form-row {
@@ -241,11 +244,13 @@ input[type="radio"] {
 }
 
 .radio-group label {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   gap: 0.25em;
   cursor: pointer;
   white-space: nowrap;
+  vertical-align: middle;
+  line-height: normal;
 }
 
 /* ===== Details/Summary Styling ===== */
@@ -625,11 +630,13 @@ details summary h4 {
   }
 
   .radio-group label {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     gap: 0.5em;
     white-space: normal;
     margin-bottom: 0.5em;
+    vertical-align: middle;
+    line-height: normal;
   }
 
   .radio-group input[type="radio"] {
