--- a/www/custom.css
+++ b/www/custom.css
@@ -249,8 +249,13 @@ input[type="radio"] {
   gap: 0.25em;
   cursor: pointer;
   white-space: nowrap;
-  vertical-align: middle;
-  line-height: normal;
+  line-height: 1;
+  font-size: inherit;
+}
+
+.radio-group input[type="radio"] {
+  position: relative;
+  top: 0.1em;
 }
 
 /* ===== Details/Summary Styling ===== */
