--- a/www/custom.css
+++ b/www/custom.css
@@ -683,11 +683,30 @@ details[open] > summary ~ * {
     padding-left: 0;
   }
 
-  /* ISP情報の表示崩れ対策 */
-  .row .col2 {
+  /* ISP情報を縦並びに */
+  .row {
+    flex-direction: column;
+    padding-left: 0.5em !important;
+    line-height: 1.3;
+  }
+
+  .col1,
+  .col2 {
+    display: block;
+    width: 100%;
+  }
+
+  .col1::after {
+    content: "";
+  }
+
+  .col2 {
+    padding-left: 0;
+    margin-top: 0.2em;
     word-wrap: break-word;
     word-break: break-all;
-    overflow-wrap: break-word;
+    overflow: visible;
+    text-overflow: clip;
   }
 }
 
