--- a/www/custom.css
+++ b/www/custom.css
@@ -337,7 +337,7 @@ details summary::-webkit-details-marker {
 /* Postinst details specific styling */
 #postinst-details summary {
   padding: 1em 0;
-  margin-left: -1.5em;
+  margin-left: 0;
   padding-left: 1.5em;
 }
 
@@ -359,7 +359,7 @@ details summary::-webkit-details-marker {
 
 /* UCI defaults details specific styling */
 #uci-defaults-details summary {
-  margin-left: -1.5em;
+  margin-left: 0;
   padding-left: 1.5em;
 }
 
