--- a/www/custom.css
+++ b/www/custom.css
@@ -337,8 +337,8 @@ details summary::-webkit-details-marker {
 /* Postinst details specific styling */
 #postinst-details summary {
   padding: 1em 0;
-  margin-left: 0;
-  padding-left: 1.5em;
+  margin-left: 1em;
+  padding-left: 0;
 }
 
 #postinst-details summary h4 {
@@ -359,8 +359,8 @@ details summary::-webkit-details-marker {
 
 /* UCI defaults details specific styling */
 #uci-defaults-details summary {
-  margin-left: 0;
-  padding-left: 1.5em;
+  margin-left: 1em;
+  padding-left: 0;
 }
 
 #uci-defaults-details summary h4 {
