--- a/www/custom.css
+++ b/www/custom.css
@@ -286,9 +286,7 @@ details summary {
   padding: 1em 0 1em 0;
   user-select: none;
   color: inherit;
-  display: flex !important;
-  align-items: center;
-  justify-content: space-between;
+  display: list-item !important;
   list-style: disclosure-closed !important;
   list-style-position: outside !important;
 }
@@ -308,6 +306,7 @@ details summary h3 {
 
 details summary h4,
 details summary h5 {
+  margin: 0;
   font-weight: 500;
 }
 
@@ -318,7 +317,6 @@ details[open] summary {
 /* Webkit browsers用 */
 details summary::-webkit-details-marker {
   display: inline-block !important;
-  margin-right: 0.5em;
 }
 
 /* Details containers */
@@ -343,6 +341,8 @@ details summary::-webkit-details-marker {
 }
 
 #postinst-details summary h4 {
+  margin: 0;
+  display: block;
 }
 
 #postinst-additional-info {
@@ -362,6 +362,8 @@ details summary::-webkit-details-marker {
 }
 
 #uci-defaults-details summary h4 {
+  margin: 0;
+  display: block;
 }
 
 #uci-defaults-details summary .file-size-info {
