--- a/www/custom.css
+++ b/www/custom.css
@@ -341,7 +341,7 @@ details summary::-webkit-details-marker {
 }
 
 #postinst-details summary h4 {
-  float: left;
+  display: inline-block;
   margin: 0;
 }
 
@@ -362,13 +362,12 @@ details summary::-webkit-details-marker {
 }
 
 #uci-defaults-details summary h4 {
-  float: left;
+  display: inline-block;
   margin: 0;
 }
 
 #uci-defaults-details summary .file-size-info {
   display: block !important;
-  clear: both;
   margin-left: 1.5em;
   margin-top: 0.5em;
 }
