--- a/www/custom.css
+++ b/www/custom.css
@@ -334,56 +334,24 @@ details summary::-webkit-details-marker {
   padding-left: 1.5em;
 }
 
-/* Postinst details specific styling */
-#postinst-details summary {
-  padding: 1em 0;
-  margin-left: 1em;
-  display: list-item !important;
-  list-style: disclosure-closed outside !important;
-}
-
-#postinst-details[open] summary {
-  list-style-type: disclosure-open !important;
-}
-
-#postinst-details summary h4 {
-  margin: 0;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-#postinst-additional-info {
-  display: block !important;
-  margin-top: 0.5em;
-  margin-left: 1.5em;
-}
-
-#postinst-total-size {
-  font-size: 0.9em;
-  color: var(--text-muted);
-}
-
-/* UCI defaults details specific styling */
+/* Nested details (Postinst and UCI-defaults) */
+#postinst-details summary,
 #uci-defaults-details summary {
   margin-left: 1em;
-  display: list-item !important;
-  list-style: disclosure-closed outside !important;
 }
 
-#uci-defaults-details[open] summary {
-  list-style-type: disclosure-open !important;
-}
-
+#postinst-details summary h4,
 #uci-defaults-details summary h4 {
-  margin: 0;
   display: inline-block;
   vertical-align: middle;
 }
 
+/* Additional info - aligned with h4 text */
+#postinst-additional-info,
 #uci-defaults-details summary .file-size-info {
-  display: block !important;
-  margin-left: 1.5em;
+  display: block;
   margin-top: 0.5em;
+  margin-left: 0;
 }
 
 /* ===== Additional Info Displays ===== */
