--- a/www/custom.css
+++ b/www/custom.css
@@ -709,9 +709,11 @@ details[open] > summary ~ * {
     text-overflow: clip;
   }
 
-  /* h3のアコーデオン矢印を明示的に表示 */
+  /* h3のアコーデオン矢印を表示領域内に収める */
   #packages-details > summary,
   #scripts-details > summary {
+    margin-left: 0 !important;
+    padding-left: 1em !important;
     display: list-item !important;
     list-style: disclosure-closed outside !important;
   }
