--- a/www/custom.css
+++ b/www/custom.css
@@ -334,7 +334,7 @@ details summary::-webkit-details-marker {
   padding-left: 1.5em;
 }
 
-/* Nested details (Postinst and UCI-defaults) */
+/* Nested details (Postinst and UCI-defaults) - with working disclosure triangle */
 #postinst-details summary,
 #uci-defaults-details summary {
   margin-left: 1em;
@@ -683,6 +683,7 @@ details[open] > summary ~ * {
     font-size: inherit;
   }
 
+  /* ISP情報を縦並びに */
   .row {
     flex-direction: column;
     padding-left: 0.5em !important;
@@ -708,10 +709,18 @@ details[open] > summary ~ * {
     text-overflow: clip;
   }
 
+  /* h3のアコーデオン矢印を表示領域内に収める */
   #packages-details > summary,
   #scripts-details > summary {
     margin-left: 0 !important;
     padding-left: 1em !important;
+    display: list-item !important;
+    list-style: disclosure-closed inside !important;
+  }
+  
+  #packages-details[open] > summary,
+  #scripts-details[open] > summary {
+    list-style-type: disclosure-open !important;
   }
 }
 
