--- a/www/custom.css
+++ b/www/custom.css
@@ -347,6 +347,18 @@ details summary::-webkit-details-marker {
   list-style-type: disclosure-open !important;
 }
 
+#custom-packages-details,
+#custom-scripts-details {
+  margin-top: 1.5em;
+  padding-left: 1.5em;
+}
+
+#custom-packages-details > summary,
+#custom-scripts-details > summary {
+  margin-left: -1.5em;
+  padding-left: 1.5em;
+}
+
 #postinst-details summary h4,
 #uci-defaults-details summary h4 {
   display: inline-block;
