--- a/www/custom.css
+++ b/www/custom.css
@@ -354,7 +354,7 @@ details summary::-webkit-details-marker {
 
 #custom-packages-details > summary,
 #custom-scripts-details > summary {
-  list-style-position: inside !important;
+  padding-left: 1.5em;
 }
 
 #postinst-details summary h4,
@@ -736,10 +736,7 @@ details[open] > summary ~ * {
   /* h3のアコーデオン矢印を表示領域内に収める */
   #custom-packages-details > summary,
   #custom-scripts-details > summary {
-    margin-left: 0 !important;
     padding-left: 1em !important;
-    display: list-item !important;
-    list-style: disclosure-closed outside !important;
   }
   
   #custom-packages-details[open] > summary,
